[package]
name = "blazingqlog"
version = "0.1.0"
edition = "2021"
description = "QUIC QLOG parser written in Rust."
readme = "README.md"
repository = "https://github.com/louisna/blazingqlog"
license = "MIT"
keywords = ["QUIC", "QLOG"]

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
jsonseq = "0.1.1"
serde_json = "1.0.139"
csv = "1.3.1"